# n8n-pysrv

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  n8n-pysrv.code-workspace  pyproject.toml
.clinerules/: 00_behavior.md  01_n8n_project_patterns.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tools/: __init__.py
tools/getURLContent/: README.md  main.py  test_url_utils.py
tools/utils/: __init__.py  url_utils.py
