[tool.poetry]
name = "n8n-pysrv"
version = "1.0.0"
description = "FastAPIを使用したシンプルなAPIサーバー"
authors = ["myoshimi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
