[tool.poetry]
name = "n8n-pysrv"
version = "1.0.0"
description = "FastAPIを使用したシンプルなAPIサーバー"
authors = ["myoshimi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
requests = "^2.32.5"
readability-lxml = "^0.8.1"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"
html2text = "^2025.4.15"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
